--- a/styles/pages/about/about.css
+++ b/styles/pages/about/about.css
@@ -1,24 +1,72 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+/*
+0 - 430px;       small-phone
+430 - 568px:     medium-phone
+568 - 600px:     phone
+600 - 1000px:    tablet portrait
+900 - 1300px:    tablet landscape
+[1300 - 1800px] is where normal style apply
+1800px + :       Big desktop
+*/
+/*
+$breakpoint arguments choice:
+- s-phone
+- M-phone
+- phone
+- tab-port
+- tab-land
+- big-desktop
+*/
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  font-weight: 700;
+}
+
+h1 {
+  font-size: calc(24px + 2vmin);
+}
+
+h2 {
+  font-size: calc(20px + 2vmin);
+}
+
+h3 {
+  font-size: calc(18px + 2vmin);
+}
+
+h4 {
+  font-size: calc(16px + 1vmin);
+}
+
+h5 {
+  font-size: calc(14px + 1vmin);
+}
+
+h6 {
+  font-size: calc(10px + 1vmin);
+}
+
+p {
+  font-size: calc(10px + 1vmin);
+  color: #222222;
+}
+
+a {
+  text-decoration: none;
+}
+
 *,
 *::before,
 *::after {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: inherit;
-          box-sizing: inherit;
-}
-
-html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-size: 62.5%;
 }
 
 body {
-  font-family: sans-serif;
-  background-color: blueviolet;
-  color: white;
-  font-weight: 300;
-  line-height: 1.6;
+  font-family: 'Montserrat', sans-serif;
+  line-height: 1.5;
 }
 
 h1 {
