--- a/styles/pages/home/home.css
+++ b/styles/pages/home/home.css
@@ -68,4 +68,8 @@ body {
   font-family: 'Montserrat', sans-serif;
   line-height: 1.5;
 }
-/*# sourceMappingURL=base-style.css.map */
+
+a {
+  text-decoration: none;
+}
+/*# sourceMappingURL=home.css.map */
