--- a/styles/pages/about/about.css
+++ b/styles/pages/about/about.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 /*
 0 - 430px;       small-phone
 430 - 568px:     medium-phone
@@ -47,11 +46,12 @@ h6 {
 }
 
 p {
-  font-size: calc(10px + 1vmin);
+  font-size: 1.1vw;
   color: #222222;
 }
 
 a {
+  font-size: calc(8px + 1vmin);
   text-decoration: none;
 }
 
