--- a/styles/sass/_typography.scss
+++ b/styles/sass/_typography.scss
@@ -25,10 +25,12 @@ h6{
 }
 
 p{
-    font-size: calc(10px + 1vmin); 
+    // font-size: calc(10px + 1vmin); 
+    font-size: 1.1vw;
     color: $text-dark;
 }
 
 a{
+    font-size: calc(8px + 1vmin);
     text-decoration: none;
 }
