--- a/styles/pages/about/about.css
+++ b/styles/pages/about/about.css
@@ -51,7 +51,7 @@ p {
 }
 
 a {
-  font-size: calc(8px + 1vmin);
+  font-size: calc(clamp(0.9rem, 1vw + 1rem, 2.2rem));
   text-decoration: none;
 }
 
