about page 80% complete, base font-size set to 62.5%

--- a/styles/base/base-style.scss
+++ b/styles/base/base-style.scss
@@ -9,10 +9,15 @@
 *::after{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: inherit;
+}
+
+html{
+    font-size: 62.5%; // 1 rem = 10px
 }
 
 body{
+    box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
     line-height: 1.5;
 }
