--- a/styles/pages/about/about.scss
+++ b/styles/pages/about/about.scss
@@ -1,5 +1,170 @@
 @import '../../base/base-style.scss';
+@import '../../sass/variables';
 
-h1{
-    color: yellow;
+.about{
+    
+    &__header{
+        background-image: url(/assets/images/gcl-header/banner-about.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+        
+        height: 70vw;
+        padding: 0 20%;
+    
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    
+        &--content{
+            color: $text-light;
+            text-align: center;
+    
+            .heading{
+                font-weight: 400;
+            }
+        }
+    }
+
+    &__us{
+
+        &--heading{
+            margin-bottom: 3rem;
+            text-align: center;
+        }
+
+        &--btn-group{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 1rem;
+
+            .group-1{
+                display: flex;
+                gap: 1rem;
+            }
+            .group-2{
+                display: flex;
+                gap: 1rem;
+            }
+        }
+
+        .btn{
+            color: $primary;
+            background-color: white;
+            font-size: 2rem;
+            padding: 1rem 2rem;
+            border: 2px solid $primary;
+            border-radius: .5rem;
+            cursor: pointer;
+        }
+        .btn:hover{
+            background-color: $primary;
+            color: $text-light;
+        }
+
+        &--info{
+            display: grid;
+            grid-template-columns: repeat(2, [col-start] 50% [col-end]);
+            grid-template-rows: repeat(3, [row-start] min-content [row-end]);
+
+            .info-1{
+                grid-column: col-start 1 / col-end 1;
+                grid-row: row-start 1 / row-end 1;            
+            }
+            .image-1{
+                grid-column: col-start 2 / col-end 2;
+                grid-row: row-start 1 / row-end 1;                
+            }
+            .info-2{
+                grid-column: col-start 2 / col-end 2;
+                grid-row: row-start 2 / row-end 2;                
+            }
+            .image-2{
+                grid-column: col-start 1 / col-end 1;
+                grid-row: row-start 2 / row-end 2;                
+            }
+            .info-3{
+                grid-column: col-start 1 / col-end 1;
+                grid-row: row-start 3 / row-end 3;                
+            }
+            .image-3{
+                grid-column: col-start 2 / col-end 2;
+                grid-row: row-start 3 / row-end 3;
+            }
+
+
+            .img{
+                height: 100%;
+                object-fit: cover;
+            }
+            .content{
+                font-size: 1.8rem;
+
+                p:not(:last-child){
+                    margin-bottom: 1rem;
+                }
+            }
+            .img-container{
+                overflow: hidden;
+            }
+            .text-container{
+                padding: 8rem;
+                background-color: $background-grey
+            }
+        }
+    }
+    &__contribution{
+        display: flex;
+        justify-content: center;
+
+        .text{
+            font-size: 1.3rem;
+        }
+
+        .container{
+            width: 50rem;
+            text-align: center;
+
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+        }
+
+        .logo-container{
+            display: flex;
+            justify-content: center;
+            gap: 1rem;
+
+            .logo{
+                height: 7rem;
+            }
+        }
+    }
+
+    &__team{
+        background-color: $background-grey;
+
+        &--heading{
+            text-align: center;
+            margin-bottom: 7rem;
+        }
+
+        &--container{
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
+            grid-gap: 2rem;
+
+            .member{
+                width: max-content;
+
+                .img-container{
+                    margin-bottom: 1rem;
+                }
+
+                &__designation{
+                    font-size: 1.5rem;
+                }
+            }
+        }
+    }
 }
