--- a/styles/pages/home/home.css
+++ b/styles/pages/home/home.css
@@ -23,31 +23,30 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: calc(24px + 2vmin);
+  font-size: 4rem;
 }
 
 h2 {
-  font-size: calc(20px + 2vmin);
+  font-size: 3.5rem;
 }
 
 h3 {
-  font-size: calc(18px + 2vmin);
+  font-size: 2.7rem;
 }
 
 h4 {
-  font-size: calc(16px + 1vmin);
+  font-size: 2rem;
 }
 
 h5 {
-  font-size: calc(14px + 1vmin);
+  font-size: 1.8rem;
 }
 
 h6 {
-  font-size: calc(10px + 1vmin);
+  font-size: 1.3rem;
 }
 
 p {
-  font-size: calc(10px + 1vmin);
   color: #222222;
 }
 
@@ -55,16 +54,42 @@ a {
   text-decoration: none;
 }
 
+.mb-1 {
+  margin-bottom: 1rem;
+}
+
+.mb-2 {
+  margin-bottom: 2rem;
+}
+
+.mb-3 {
+  margin-bottom: 3rem;
+}
+
+.container-1 {
+  padding: 10rem;
+}
+
+.text-center {
+  text-align: center;
+}
+
 *,
 *::before,
 *::after {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+}
+
+html {
+  font-size: 62.5%;
 }
 
 body {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
   line-height: 1.5;
 }
