navbar, responsive, active funtion

--- a/styles/global.css
+++ b/styles/global.css
@@ -85,5 +85,6 @@ a {
 body {
   font-family: 'Montserrat', sans-serif;
   line-height: 1.5;
+  overflow-x: hidden;
 }
 /*# sourceMappingURL=global.css.map */
