--- a/styles/pages/home/home.scss
+++ b/styles/pages/home/home.scss
@@ -1,69 +1,127 @@
 @import "../../global.scss";
 
-
-.header-section{
-    nav{
-        padding: 1% 5%;
+.header-section {
+    nav {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        flex-grow: 1;
-        position: relative;
         background-color: $white;
-        @media screen and (max-width:601px) {
-            flex-direction: column;
-            align-items: center;
-        }
-        .logo{
-            width: 100%;
-            img{
+        padding: 1% 5%;
+        .logo {
+            img {
                 height: 100%;
             }
         }
-        .main-menu{
-            width: 100%;
+        .nav-links {
             display: flex;
-            justify-content: space-between;
-            animation: menu 0.3s linear;
-            @media screen and (max-width:601px) {
-                display: none;
+            justify-content: space-around;
+            width: 50%;
+            li {
+                list-style-type: none;
+                a {
+                    color: $text-dark;
+                    text-decoration: none;
+                    font-weight: 600;
+                    font-size: 1rem;
+                    padding: 10px 0;
+                    transition: 0.3s;
+                    &:hover{
+                        color: $primary;
+                    }
+                }
             }
-            a{
-                color: $text-dark;
-                font-weight: 600;
-                margin: 0 1%;
-                text-decoration: none;
-                transition: 0.3s;
-                &:hover{
-                    color: $primary;
-                }
-                @media screen and (max-width:601px) {
-                    margin: 5% 0;
-                    display: block;
-                }
+            .page-active{
+                color: $primary;
             }
         }
-        .menu-btn{
-            position: absolute;
-            right: 5%;
-            top: 5%;
+        .burger {
+            display: none;
+            cursor: pointer;
+            .burger-line{
+                width: 25px;
+                height: 3px;
+                background-color: $text-dark;
+                margin: 5px;
+            }
+        }   
+        .toggle{
+            .line1{
+                transform: rotate(-45deg) translate(-5px, 6px);
+                transition: transform 0.2s ease-in;
+            }
+            .line2{
+                opacity: 0;
+            }
+            .line3{
+                transform: rotate(45deg) translate(-5px, -6px);
+                transition: transform 0.2s ease-in;
+            }
         }
     }
 }
 
-
-@keyframes menu {
-    0%{
-        opacity: 0;
-    }
-    100%{
-        opacity: 1;
-    }
-}
-.header-banner{
+.header-banner {
     height: 60vw;
-    background-image: url("../../../assets/gcl-header/banner-home.png");
+    background-image: url("../../../assets/images/gcl-header/banner-home.png");
     background-repeat: no-repeat;
     background-size: cover;
+}
 
+
+// animation
+
+@keyframes navLinkFade {
+    from {
+        opacity: 0;
+        transform: translateX(50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
+
+
+// media queries
+
+@media screen and (max-width: 600px) {
+    body{
+        overflow-x: hidden;
+    }
+    .header-section{
+        nav{
+            height: 80px;
+            .nav-links{
+                position: absolute;
+                right: 0;
+                height: 90vh;
+                top: 80px;
+                background-color: #000;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                width: 100%;
+                transform: translateX(100%);
+                transition: transform 0.3s ease-in;
+                li{
+                    opacity: 0;
+                    padding: 5% 0;
+                    a{
+                        color: #ffffff;
+                    }
+                }
+            }   
+            .logo {
+                img {
+                    height: 50%;
+                }
+            } 
+            .nav-active{
+                transform: translateX(0%);
+            }                     
+            .burger {
+                display: block;
+            }
+        }
+    }
 }
