--- a/styles/base/base-style.scss
+++ b/styles/base/base-style.scss
@@ -1,14 +1,11 @@
-
 @import "../sass/mixins";
 @import "../sass/typography";
 @import "../sass/variables";
 
-*,
-*::before,
-*::after{
+*{
     margin: 0;
     padding: 0;
-    box-sizing: inherit;
+    box-sizing: border-box;
 }
 
 html{
@@ -16,9 +13,8 @@ html{
 }
 
 body{
-    box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
     line-height: 1.5;
+    overflow-x: hidden;
 }
-
 
