--- a/styles/pages/home/home.css
+++ b/styles/pages/home/home.css
@@ -17,6 +17,7 @@ $breakpoint arguments choice:
 - tab-land
 - big-desktop
 */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
   font-weight: 700;
@@ -75,6 +76,18 @@ a {
   text-align: center;
 }
 
+.author-title {
+  color: #fff;
+  font-size: calc(8px + 1.5vw);
+  font-weight: 500;
+}
+
+@media screen and (max-width: 600px) {
+  .author-title {
+    font-size: 14px;
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -86,6 +99,155 @@ body {
   font-family: 'Montserrat', sans-serif;
   line-height: 1.5;
   overflow-x: hidden;
+}
+
+/*
+0 - 430px;       small-phone
+430 - 568px:     medium-phone
+568 - 600px:     phone
+600 - 1000px:    tablet portrait
+900 - 1300px:    tablet landscape
+[1300 - 1800px] is where normal style apply
+1800px + :       Big desktop
+*/
+/*
+$breakpoint arguments choice:
+- s-phone
+- M-phone
+- phone
+- tab-port
+- tab-land
+- big-desktop
+*/
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  font-weight: 700;
+}
+
+h1 {
+  font-size: 4rem;
+}
+
+h2 {
+  font-size: 3.5rem;
+}
+
+h3 {
+  font-size: 2.7rem;
+}
+
+h4 {
+  font-size: 2rem;
+}
+
+h5 {
+  font-size: 1.8rem;
+}
+
+h6 {
+  font-size: 1.3rem;
+}
+
+p {
+  color: #222222;
+}
+
+a {
+  font-size: calc(clamp(0.9rem, 1vw + 1rem, 2.2rem));
+  text-decoration: none;
+}
+
+.mb-1 {
+  margin-bottom: 1rem;
+}
+
+.mb-2 {
+  margin-bottom: 2rem;
+}
+
+.mb-3 {
+  margin-bottom: 3rem;
+}
+
+.container-1 {
+  padding: 10rem;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.author-title {
+  color: #fff;
+  font-size: calc(8px + 1.5vw);
+  font-weight: 500;
+}
+
+@media screen and (max-width: 600px) {
+  .author-title {
+    font-size: 14px;
+  }
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  line-height: 1.5;
+  overflow-x: hidden;
+}
+
+.who-we-are {
+  padding: 5%;
+}
+
+@media screen and (max-width: 600px) {
+  .who-we-are {
+    margin-top: 5%;
+  }
+}
+
+.who-we-are .who-we-are-header {
+  margin: 0 auto;
+  width: 50%;
+}
+
+@media screen and (max-width: 600px) {
+  .who-we-are .who-we-are-header {
+    width: 100%;
+  }
+}
+
+.who-we-are .who-we-are-header .header-content {
+  text-align: center;
+}
+
+.who-we-are .who-we-are-header .header-content h2 {
+  font-size: calc(10px + 2vw);
+  font-weight: 600;
+  color: #72725D;
+}
+
+@media screen and (max-width: 600px) {
+  .who-we-are .who-we-are-header .header-content h2 {
+    font-size: 16px;
+  }
+}
+
+.who-we-are .who-we-are-header .header-content p {
+  font-size: calc(10px + 0.6vw);
+  color: #72725D;
+}
+
+@media screen and (max-width: 600px) {
+  .who-we-are .who-we-are-header .header-content p {
+    font-size: 14px;
+  }
 }
 
 .header-section nav {
@@ -123,10 +285,16 @@ body {
   color: #222222;
   text-decoration: none;
   font-weight: 600;
-  font-size: 1rem;
+  font-size: calc(10px + 0.5vw);
   padding: 10px 0;
   -webkit-transition: 0.3s;
   transition: 0.3s;
+}
+
+@media screen and (max-width: 600px) {
+  .header-section nav .nav-links li a {
+    font-size: 16px;
+  }
 }
 
 .header-section nav .nav-links li a:hover {
@@ -176,6 +344,170 @@ body {
   background-image: url("../../../assets/images/gcl-header/banner-home.png");
   background-repeat: no-repeat;
   background-size: cover;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.header-banner .header-banner-content {
+  width: 60%;
+  text-align: center;
+}
+
+@media screen and (max-width: 600px) {
+  .header-banner .header-banner-content {
+    width: 80%;
+  }
+}
+
+.header-banner .header-banner-content h2 {
+  color: #fff;
+  font-size: calc(8px + 2vw);
+  font-weight: 500;
+}
+
+@media screen and (max-width: 600px) {
+  .header-banner .header-banner-content h2 {
+    font-size: 16px;
+  }
+}
+
+.person-slider {
+  height: 550px;
+  padding: 0 5%;
+  margin-top: 2.5%;
+}
+
+.person-slider-container {
+  position: relative;
+  background-image: url("../../../assets/yellow-path.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  z-index: 1;
+}
+
+.person-slider-container .person-prev-arrow {
+  cursor: pointer;
+  text-align: center;
+  position: absolute;
+  left: 2.5%;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.person-slider-container .person-next-arrow {
+  cursor: pointer;
+  text-align: center;
+  position: absolute;
+  right: 2.5%;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.person-slider-container .person-data {
+  height: 550px;
+}
+
+@media screen and (max-width: 600px) {
+  .person-slider-container .person-data {
+    height: auto;
+    padding: 0.5%;
+  }
+}
+
+.person-slider-container .person-data .person-data-grid {
+  height: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+}
+
+@media screen and (max-width: 600px) {
+  .person-slider-container .person-data .person-data-grid {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+}
+
+.person-slider-container .person-data .person-data-grid .person-image {
+  position: relative;
+}
+
+@media screen and (max-width: 600px) {
+  .person-slider-container .person-data .person-data-grid .person-image {
+    min-height: 250px;
+  }
+}
+
+.person-slider-container .person-data .person-data-grid .person-image img {
+  width: 95%;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
+.person-slider-container .person-data .person-data-grid .person-quote {
+  padding: 5%;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@media screen and (max-width: 600px) {
+  .person-slider-container .person-data .person-data-grid .person-quote {
+    padding: 5% 2.5%;
+  }
+}
+
+.person-slider-container .person-data .person-data-grid .person-quote .quote {
+  font-size: calc(8px + 1vw);
+  color: #222222;
+}
+
+.person-slider-container .person-data .person-data-grid .person-quote .designation {
+  margin-top: 2.5%;
+}
+
+.person-slider-container .person-data .person-data-grid .person-quote .designation p {
+  font-size: calc(8px + 0.8vw);
+  color: #72725D;
+}
+
+@media screen and (min-width: 1441px) {
+  .person-slider-container {
+    height: 700px;
+  }
+  .person-slider-container .person-data {
+    height: 700px;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  .person-slider-container {
+    height: 500px;
+  }
+  .person-slider-container .person-data {
+    height: 500px;
+  }
 }
 
 @-webkit-keyframes navLinkFade {
@@ -205,8 +537,8 @@ body {
 }
 
 @media screen and (max-width: 600px) {
-  body {
-    overflow-x: hidden;
+  .header-section {
+    z-index: 1000;
   }
   .header-section nav {
     height: 80px;
@@ -216,7 +548,7 @@ body {
     right: 0;
     height: 90vh;
     top: 80px;
-    background-color: #000;
+    background-color: #222222;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -228,26 +560,27 @@ body {
         -ms-flex-align: center;
             align-items: center;
     width: 100%;
-    -webkit-transform: translateX(100%);
-            transform: translateX(100%);
+    -webkit-transform: translateY(calc(-100% - 80px));
+            transform: translateY(calc(-100% - 80px));
     -webkit-transition: -webkit-transform 0.3s ease-in;
     transition: -webkit-transform 0.3s ease-in;
     transition: transform 0.3s ease-in;
     transition: transform 0.3s ease-in, -webkit-transform 0.3s ease-in;
+    z-index: 2;
   }
   .header-section nav .nav-links li {
     opacity: 0;
     padding: 5% 0;
   }
   .header-section nav .nav-links li a {
-    color: #ffffff;
+    color: #F9F9F9;
   }
   .header-section nav .logo img {
     height: 50%;
   }
   .header-section nav .nav-active {
-    -webkit-transform: translateX(0%);
-            transform: translateX(0%);
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
   }
   .header-section nav .burger {
     display: block;
