--- a/styles/base/base-style.css
+++ b/styles/base/base-style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 /*
 0 - 430px;       small-phone
 430 - 568px:     medium-phone
@@ -92,5 +93,6 @@ body {
           box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
   line-height: 1.5;
+  overflow-x: hidden;
 }
 /*# sourceMappingURL=base-style.css.map */
