--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -36,7 +36,7 @@
     border: 2px solid $white;
 
     &:hover{
-        color: $black;
+        color: black;
         background-color: $white;
     }
 }
