--- a/styles/components/header/header.css
+++ b/styles/components/header/header.css
@@ -75,13 +75,23 @@ a {
   text-align: center;
 }
 
-*,
-*::before,
-*::after {
+.author-title {
+  color: #fff;
+  font-size: calc(8px + 1.5vw);
+  font-weight: 500;
+}
+
+@media screen and (max-width: 600px) {
+  .author-title {
+    font-size: 14px;
+  }
+}
+
+* {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: inherit;
-          box-sizing: inherit;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 html {
@@ -89,14 +99,18 @@ html {
 }
 
 body {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
   line-height: 1.5;
   overflow-x: hidden;
 }
 
+.header-section {
+  position: relative;
+}
+
 .header-section nav {
+  padding: 1rem 3rem;
+  background-color: white;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -106,8 +120,10 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: #fff;
-  padding: 1% 5%;
+}
+
+.header-section nav .logo {
+  height: 6rem;
 }
 
 .header-section nav .logo img {
@@ -118,9 +134,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  width: 50%;
+  gap: 4rem;
 }
 
 .header-section nav .nav-links li {
@@ -131,7 +145,7 @@ body {
   color: #222222;
   text-decoration: none;
   font-weight: 600;
-  font-size: 1rem;
+  font-size: 1.6rem;
   padding: 10px 0;
   -webkit-transition: 0.3s;
   transition: 0.3s;
